fix: fixed spacing for gallery page

--- a/frontend/src/components/GalleryPage/Carousel/css/embla.css
+++ b/frontend/src/components/GalleryPage/Carousel/css/embla.css
@@ -1,4 +1,5 @@
 .embla {
+  padding-top: 10rem;
   max-width: 70rem;
   margin: auto;
   --slide-height: 30rem;
@@ -92,4 +93,10 @@
 .embla__button__svg {
   width: 35%;
   height: 35%;
+}
+
+@media (max-width: 480px) {
+  .embla {
+    padding-top: 0;
+  }
 }
