--- a/frontend/src/components/GalleryPage/Header/Header.css
+++ b/frontend/src/components/GalleryPage/Header/Header.css
@@ -1,18 +1,25 @@
-.resources-list-header {
+.resources-list-header-gallery {
   opacity: 0;
   transition: opacity 1s;
 }
 
-.resources-list-header.show {
+.resources-list-header-gallery.show {
   opacity: 1;
 }
 
-.resources-list-header {
-  height: 30rem;
+.resources-list-header-gallery {
+  height: 25rem;
   padding-top: 10rem;
   background-size: cover;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.25);
   transition: 1s;
+  display: none;
+}
+
+@media (max-width: 480px) {
+  .resources-list-header-gallery {
+    display: block;
+  }
 }
 
 /* .resources-list-header-title {
